@@ -1,3 +1,11 @@
+Mon Mar 15 14:36:33 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* migsupport.c (trivfs_begin_using_protid): In first branch,
+	protect work against PI being null, and call ports_port_deref with
+	the proper value.
+	(trivfs_begin_using_control): Likewise.
+	Reported by Mark Kettenis (kettenis@wins.uva.nl).
+	
 1999-02-06  Mark Kettenis  <kettenis@gnu.org>
 
 	* trivfs.h (trivfs_check_access_hook): New variable.
